feat(books): provide a single book
